use Java 21 `getFirst()`