@@ -114,9 +114,9 @@ public final class BanCommand extends Command {
         if (banned.isEmpty())
             return sendMessage(sender, SMPCore.messages().bannedPlayer(target, duration));
         if (banned.size() == 1)
-            return sendMessage(sender, SMPCore.messages().bannedMember(banned.get(0), duration));
+            return sendMessage(sender, SMPCore.messages().bannedMember(banned.getFirst(), duration));
         return sendMessage(sender, SMPCore.messages().bannedMemberChain(
-                banned.get(0),
+                banned.getFirst(),
                 banned.subList(1, banned.size()), duration)
         );
     }
